triage-party/release-team/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: triage-party-release
  namespace: triageparty-release
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: triage-party
